<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Nagłówek "Hobby" -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt3"
            android:gravity="center"
            android:textSize="32sp"
            android:layout_marginTop="16dp"/>

        <!-- Opis hobby -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opisHobby"
            android:textSize="25sp"
            android:layout_margin="16dp"/>

        <!-- Pierwsze zdjęcie -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:src="@drawable/galaktyka1"
            android:contentDescription="@string/galaxy1"
            android:layout_margin="16dp"/>

        <!-- Drugie zdjęcie -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:src="@drawable/galaktyka2"
            android:contentDescription="@string/galaxy2"
            android:layout_margin="16dp"/>

        <!-- Przyciski "Powrót" i "Ciekawe Zdjęcie" -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:id="@+id/buttonBack"/>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/button3"
                android:id="@+id/buttonInterestingPhoto"/>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
