<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Nagłówek "O Autorze" -->
    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/autor"
        android:gravity="center"
        android:textSize="32sp"
        android:layout_marginTop="16dp"/>

    <!-- Zdjęcie -->
    <ImageView
        android:id="@+id/zdjecie"
        android:layout_width="419dp"
        android:layout_height="360dp"
        android:layout_centerInParent="true"
        android:src="@drawable/zdjecie" />

    <!-- Krótka informacja o sobie -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_below="@id/textViewTitle"
        android:layout_marginTop="4dp" />

    <!-- Przycisk "Powrót" -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_alignParentBottom="true"
        android:layout_margin="4dp"
        android:id="@+id/buttonBack" />

    <!-- Przycisk "Hobby" -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt3"
        android:layout_above="@id/buttonBack"
        android:layout_margin="4dp"
        android:id="@+id/buttonHobby" />

</RelativeLayout>
